# Kerala-toddy-finder

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-lint.yml  ci.yml  docker-publish.yml  frontend-lint.yml  semgrep.yml  thank-you.yml
toddy_shop_backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
toddy_shop_backend/config/: asgi.py  settings.py  urls.py  wsgi.py
toddy_shop_backend/core/: exceptions.py  middleware.py  models.py  pagination.py  responses.py  serializers.py  services.py  urls.py  views.py
toddy_shop_backend/core/fixtures/: initial_data.json
toddy_shop_backend/core/migrations/: 0001_initial.py
toddy_shop_backend/media_assets/: apps.py
toddy_shop_backend/shared/: exceptions.py  middleware.py  pagination.py  permissions.py  responses.py
toddy_shop_backend/shops/: admin.py  models.py  serializers.py  views.py
toddy_shop_backend/shops/migrations/: 0001_initial.py
toddy_shop_backend/toddy_shop_backend/: asgi.py  settings.py  urls.py  wsgi.py
toddy_shop_frontend/: package-lock.json  package.json
toddy_shop_frontend/src/app/: globals.css  layout.tsx  page.tsx
toddy_shop_frontend/src/app/admin/: page.tsx
toddy_shop_frontend/src/app/community/: page.tsx
toddy_shop_frontend/src/app/explore/: page.tsx
toddy_shop_frontend/src/lib/: community-data.ts  constants.ts  explore-data.ts  utils.ts
(+15 files in other folders)
